--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "devDependencies": {
         "axios": "^0.16.2",
         "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.0.1",
+        "cross-env": "^3.2.3",
         "jquery": "^3.1.1",
+        "js-beautify": "1.6.14",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
